Bing/examples/bad/temp.bing
void f() {
    int s = "abc";

}
void main() {
    f();
}